SLIB-47 - fix typos; make code and code style improvements;